Fix contact page to show my blog

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,9 @@
                     <li>
                         <a href="research.html"><span>Research</span></a>
                     </li>
+ 		    <li>
+                        <a href="blog.html"><span>Blog</span></a>
+                    </li>
                     <li>
                         <a href="contact.html"><span>Contact</span></a>
                     </li>
