Update contact info

--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                         <div class="box">
                             <span>
                                 <strong> Address:</strong>
-                                4915 Todd Drive, Unit 19, Ames, IA, 50014
+                                2418 Snedecor Hall, Ames, IA, 50011
                             </span>
                             <br>
                             <span>
