--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                 <div class="logo-text text-align-center">
                     <h1>My Name is Eric Hare</h1>
-                    <h3>I am a PhD student at Iowa State University studying Statistics.  I received a Bachelor's degree in Statistics and a Bachelor's degree in Computer Engineering at the University of Washington in 2012.  My research interests include statistical computing, graphics, and statistical models.  In my spare time, I enjoy playing basketball and travelling.</h3>
+                    <h3>I am a PhD student at Iowa State University studying Statistics.  I received a Bachelor's degree in Statistics and a Bachelor's degree in Computer Engineering at the University of Washington in 2012.  My research interests include statistical computing, graphics, and statistical models.  In my spare time, I enjoy playing basketball and traveling.</h3>
                 </div>
                 
             </div>
