Major layout/design update

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@ layout: default
 title: Home
 ---
 
-I am a graduate student at Iowa State University in the Department of Statistics.  I graduated from the University of Washington in 2012 with a BS in Statistics and a BS in Computer Engineering.  My research interests include statistical computing, data analysis, statistical graphics, and experimental design.  I have spent two years working at TIBCO Software designing an automated R package compatibility framework.  I am currently developing an <a href="http://www.pelica.org">interactive web application</a> to analyze the properties of peptide libraries.
+<div id="biography" class="page home" data-pos="home">
+	<div class="pageheader">
+		<div class="headercontent">
+			<div class="section-container">
+			
+				<div class="row">
+					<div class="col-sm-2 visible-sm"></div>
+					<div class="clearfix visible-sm visible-xs"></div>
+					<div class="col-sm-12 col-md-7">
+						<h3 class="title">Eric Hare</h3>
+						<p>My name is Eric Hare, and I am a graduate student student at Iowa State University. I am currently pursuing a co-major in Statistics and Computer Science. I'm developing a <a href="http://www.pelica.org">web application</a> to analyze properties of peptide libraries.</p>
+					</div>  
+				
+				</div>
+			</div>        
+		</div>
+	</div>
+</div>
 
-<img src="img/boxplot.png">
