--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,32 @@
 layout: default
 title: Contact
 ---
-erichare@iastate.edu
-<br>
-425-405-0279
-<br><br>
-2418 Snedecor Hall
-<br>
-Ames, IA, 50011
-<br><br>
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-<g:person href="https://plus.google.com/116539989320368605033" data-rel="author"></g:person>
-<br>
-<!-- Facebook Badge START --><a href="https://www.facebook.com/ericrhare" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Eric Hare">Eric Hare</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;">&nbsp;|&nbsp;</span><a href="https://www.facebook.com/badges/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Make your own badge!">Create Your Badge</a><br/><a href="https://www.facebook.com/ericrhare" target="_TOP" title="Eric Hare"><img src="https://badge.facebook.com/badge/599751040.198.1117620396.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
-<br>
-<a href="https://twitter.com/Raftysworld" class="twitter-follow-button" data-show-count="false">Follow @Raftysworld</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-<br>
-<a href="http://www.linkedin.com/pub/eric-hare/38/809/152">
-	<img src="http://www.linkedin.com/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Eric Hare's profile on LinkedIn">
-</a>
+
+<div id="contact" class="page stellar">
+	<div class="pageheader">
+		<div class="headercontent">
+			<div class="section-container">
+				
+				<h2 class="title">Contact</h2>
+			
+				<div class="row">
+					<div class="col-md-8">
+					<p>You can find my contact information on the right.</p> 
+					</div>
+					<div class="col-md-4">
+						<ul class="list-unstyled">
+							<li>
+								<strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
+								<span>erichare@iastate.edu</span>
+							</li>
+							<li>
+								<strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
+								<span>ericrhare@gmail.com</span>
+							</li>
+						</ul>    
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
