--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,7 @@ layout: default
 title: Blog
 ---
 
-
-<div id="publications" class="page">
+<div id="blog" class="page">
 	<div class="page-container">
 		<div class="pageheader">
 			<div class="headercontent">
