--- a/classes.html
+++ b/classes.html
@@ -11,7 +11,7 @@ title: Classes
 				
 				<div class="row">
 					<div class="col-md-12">
-						<p>Here is a list of courses I am currently and have formerly taken at Iowa State University.</p>                                                   
+						<p>Here is a list of courses I have taken at Iowa State University.</p>                                                   
 					</div>
 				</div>
 			</div>
@@ -24,16 +24,56 @@ title: Classes
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="title text-center">
-							<h3>Current Classes</h3>
+							<h3>Classes Taken</h3>
 						</div>
 						<ul class="ul-dates">
+						    <li>
+								<div class="dates">
+									<span>Spring</span>
+									<span>2015</span>
+								</div>
+								<div class="content">
+									<h4>COM S 531 - Theory of Computation</h4>
+									<p>A systematic study of the fundamental models and analytical methods of theoretical computer science. Computability, the Church-Turing thesis, decidable and undecidable problems, and the elements of recursive function theory. Time complexity, logic, Boolean circuits, and NP-completeness. Role of randomness in computation.</p>
+								</div>
+							</li>
+						    <li>
+								<div class="dates">
+									<span>Spring</span>
+									<span>2015</span>
+								</div>
+								<div class="content">
+									<h4>COM S 611 - Advanced Topics in Algorithms</h4>
+									<p>Algorithms and lower bound results for concurrent objects and synchronization. Given the spread of multiprocessor architectures, it is important to understand how to make computing more efficient by exploiting parallelism. To do this, proper synchronization and communication is essential among the processors that are working together on a common task. These multiprocessors will communicate through shared memory. We will study formally the types of coordination that are needed when processors are taking steps concurrently. We will see that there are inherent limitations on parallelism of certain events. One way to make sure certain events do not overlap is to use a mutual exclusion lock. The negative of this is that it requires waiting; a processor will need to wait until another processor completes its steps. To counter this, we introduce the wait-free and lock-free models of computation. Wait-free algorithms make progress even if only one processor is taking steps. However, these are harder to reason about. This study will lead to both algorithms, as well as impossibility results and lower bounds.</p>
+								</div>
+							</li>
+						    <li>
+								<div class="dates">
+									<span>Fall</span>
+									<span>2014</span>
+								</div>
+								<div class="content">
+									<h4>COM S 509 - Software Requirements Engineering</h4>
+									<p>The requirements engineering process including identification of stakeholders requirements elicitation techniques such as interviews and prototyping, analysis fundamentals, requirements specification, and validation. Use of Models: State-oriented, Function-oriented, and Object-oriented. Documentation for Software Requirements. Informal, semi-formal, and formal representations. Structural, informational, and behavioral requirements. Non-functional requirements. Use of requirements repositories to manage and track requirements through the life cycle. Case studies, software projects, written reports, and oral presentations will be required.</p>
+								</div>
+							</li>
+							<li>
+								<div class="dates">
+									<span>Fall</span>
+									<span>2014</span>
+								</div>
+								<div class="content">
+									<h4>COM S 581 - Computer Systems Architecture</h4>
+									<p>Quantitative principles of computer architecture design, instruction set design, processor architecture: pipelining and superscalar design, instruction level parallelism, memory organization: cache and virtual memory systems, multiprocessor architecture, cache coherency, interconnection networks and message routing, I/O devices and peripherals.</p>
+								</div>
+							</li>
 							<li>
 								<div class="dates">
 									<span>Spring</span>
 									<span>2014</span>
 								</div>
 								<div class="content">
-									<h4>STAT 585X - Data Technologies for Statistical Analysis<h4>
+									<h4>STAT 585X - Data Technologies for Statistical Analysis</h4>
 									<p>Introduction to computational methods for data analysis. Accessing and managing data formats: flat files, databases, web technologies based on mark-up languages (SML, KML, HTML), netCDF. Elements of text processing: regular expressions for cleaning data. Working with massive data, handling missing data, scaled computing. Efficient programming, reproducible code.</p>
 								</div>
 							</li>
@@ -43,7 +83,7 @@ title: Classes
 									<span>2014</span>
 								</div>
 								<div class="content">
-									<h4>STAT 601 - Advanced Statistical Methods<h4>
+									<h4>STAT 601 - Advanced Statistical Methods</h4>
 									<p>Methods of constructing complex models including adding parameters to existing structures, incorporating stochastic processes and latent variables. Use of modified likelihood functions; quasi-likelihoods; profiles; composite-likelihoods. Asymptotic normality as a basis of inference; Godambe information. Sample reuse; block bootstrap; resampling with dependence. Simulation for model assessment. Issues in Bayesian analysis.</p>
 								</div>
 							</li>
@@ -53,7 +93,7 @@ title: Classes
 									<span>2014</span>
 								</div>
 								<div class="content">
-									<h4>COM S 552 - Principles of Operating Systems<h4>
+									<h4>COM S 552 - Principles of Operating Systems</h4>
 									<p>A comparative study of high-level language facilities for process synchronization and communication. Formal analysis of deadlock, concurrency control and recovery. Protection issues including capability-based systems, access and flow control, encryption, and authentication. Additional topics chosen from distributed operating systems, soft real-time operating systems, and advanced security issues.</p>
 								</div>
 							</li>
@@ -63,31 +103,38 @@ title: Classes
 									<span>2014</span>
 								</div>
 								<div class="content">
-									<h4>COM S 610 - Description Logics for Knowledge Representation on Semantic Web<h4>
+									<h4>COM S 610 - Description Logics for Knowledge Representation on Semantic Web</h4>
 									<p>The main topics of this course/seminar relate to Description Logics (DLs). This is a family of knowledge representation languages used to build ontologies that model specific application domains. It is based on appropriately restricted fragments of first-order logic. Included, and of much interest, are issues like privacy, learning, game theory and complexity as they relate to the main topics. Applied areas that meaningfully intersect the main topics, like software engineering, bioinformatics, social sciences, economics and others will be of interest and, depending on the interests of participants, may be discussed as well.</p>
 								</div>
 							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="section color-2">
-			<div class="section-container">
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-						<div class="title text-center">
-							<h3>Class History</h3>
-						</div>
-						<ul class="ul-dates-gray">
 							<li>
 								<div class="dates">
 									<span>Fall</span>
 									<span>2013</span>
 								</div>
 								<div class="content">
-									<h4>STAT 579 - An Introduction to R</h4>
-									<p>An introduction to the logic of programming, numerical algorithms, and graphics. The R statistical programming environment will be used to demonstrate how data can be stored, manipulated, plotted, and analyzed using both built-in functions and user extensions. Concepts of modularization, looping, vectorization, conditional execution, and function construction will be emphasized.</p>
+									<h4>STAT 512 - Design of Experiments</h4>
+									<p>Basic techniques of experimental design developed in the context of the general linear model; completely randomized, randomized complete block, and Latin Square designs; factorial experiments, confounding, fractional replication; split-plot and incomplete block designs.</p>
+								</div>
+							</li>
+							<li>
+								<div class="dates">
+									<span>Fall</span>
+									<span>2013</span>
+								</div>
+								<div class="content">
+									<h4>STAT 520 - Statistical Methods III</h4>
+									<p>Nonlinear regression; generalized least squares; asymptotic inference. Generalized linear models; exponential dispersion families; maximum likelihood and inference. Designing Monte Carlo studies; bootstrap; cross-validation. Fundamentals of Bayesian analysis; data models, priors and posteriors; posterior prediction; credible intervals; Bayes Factors; types of priors; simulation of posteriors; introduction to hierarchical models and Markov Chain Monte Carlo methods.</p>
+								</div>
+							</li>
+							<li>
+								<div class="dates">
+									<span>Fall</span>
+									<span>2013</span>
+								</div>
+								<div class="content">
+									<h4>COM S 511 - Design and Analysis of Algorithms</h4>
+									<p>A study of basic algorithm design and analysis techniques. Advanced data structures, amortized analysis and randomized algorithms. Applications to sorting, graphs, and geometry. NP-completeness and approximation algorithms.</p>
 								</div>
 							</li>
 							<li>
@@ -96,8 +143,28 @@ title: Classes
 									<span>2013</span>
 								</div>
 								<div class="content">
-									<h4>STAT 226 - Introduction to Business Statistics</h4>
-									<p>Obtaining, presenting, and organizing statistical data; measures of location and dispersion; the Normal distribution; sampling and sampling distributions; elements of statistical inference; estimation and confidence intervals; hypothesis testing; inference for simple linear regression analysis; use of computers to visualize and analyze data.</p>
+									<h4>STAT 503 - Exploratory Methods and Data Mining</h4>
+									<p>Approaches to finding the unexpected in data; exploratory data analysis; pattern recognition; dimension reduction; supervised and unsupervised classification; interactive and dynamic graphical methods; computer-intensive statistical techniques for large or high dimensional data and visual inference. Emphasis is on problem solving, topical problems, and learning how so-called black-box methods actually work.</p>
+								</div>
+							</li>
+							<li>
+								<div class="dates">
+									<span>Spring</span>
+									<span>2013</span>
+								</div>
+								<div class="content">
+									<h4>STAT 511 - Statistical Methods II</h4>
+									<p>Model selection and collinearity in linear regression. Likelihood analysis for general models and models with non-normal random components; linear model results in the context of likelihood; linear mixed models and their application; estimation, inference, and prediction. Computational issues in iterative algorithms; expectation-,maximization algorithm and its use in mixed models. Case studies of applications including problem formulation, exploratory analysis, model development, estimation and inference, and model assessment.</p>
+								</div>
+							</li>
+							<li>
+								<div class="dates">
+									<span>Spring</span>
+									<span>2013</span>
+								</div>
+								<div class="content">
+									<h4>STAT 543 - Theory of Probability and Statistics II</h4>
+									<p>Point estimation including method of moments, maximum likelihood and Bayes. Properties of point estimators, mean squared error, unbiasedness, consistency, loss functions. Large sample properties of maximum likelihood estimators. Exponential families, sufficiency, completeness, ancilarity, Basu's theorem. Hypothesis tests, Neyman-Pearson lemma, uniformly most powerful tests, likelihood ratio tests, Bayes tests. Interval estimation, inverting tests, pivotal quantities. Nonparametric theory, bootstrap.</p>
 								</div>
 							</li>
 							<li>
@@ -106,8 +173,8 @@ title: Classes
 									<span>2012</span>
 								</div>
 								<div class="content">
-									<h4>STAT 305 - Engineering Statistics</h4>
-									<p>Statistics for engineering problem solving. Principles of engineering data collection; descriptive statistics; elementary probability distributions; principles of experimentation; confidence intervals and significance tests; one-, two-, and multi-sample studies; regression analysis; use of statistical software; team project involving engineering experimentation and data analysis.</p>
+									<h4>STAT 500 - Statistical Methods I</h4>
+									<p>Analysis of data from designed experiments and observational studies. Randomization-based inference; inference on group means; nonparametric bootstrap; pairing/blocking and other uses of restricted randomization. Use of linear models to analyze data; least squares estimation; estimability; sampling distributions of estimators; general linear tests; inference for parameters and contrasts. Model assessment and diagnostics; remedial measures; alternative approaches based on ranks.</p>
 								</div>
 							</li>
 							<li>
@@ -116,8 +183,18 @@ title: Classes
 									<span>2012</span>
 								</div>
 								<div class="content">
-									<h4>STAT 430 - Empirical Methods for the Computational Sciences</h4>
-									<p>Statistical methods for research involving computers; exploratory data analysis; selected topics from analysis of designed experiments - analysis of variance, hypothesis testing, interaction among variables; linear regression, logistic regression, Poisson regression; parameter estimation, prediction, confidence regions, dimension reduction techniques, model diagnostics and sensitivity analysis; Markov chains and processes; simulation techniques and bootstrap methods; applications to computer science, bioinformatics, computer engineering - programs, models and systems as objects of empirical study; communicating results of empirical studies. Statistical software: R.</p>
+									<h4>STAT 542 - Theory of Probability and Statistics I</h4>
+									<p>Sample spaces, basic probability results, conditional probability. Random variables, univariate distributions, moment generating functions. Joint distributions, conditional distributions and independence, correlation and covariance. Probability laws and transformations. Introduction to the multivariate normal distribution. Sampling distributions, normal theory, sums and order statistics. Convergence concepts, the law of large numbers, the central limit theorem and delta method. Basics of stochastic simulation.</p>
+								</div>
+							</li>
+							<li>
+								<div class="dates">
+									<span>Fall</span>
+									<span>2012</span>
+								</div>
+								<div class="content">
+									<h4>STAT 579 - An Introduction to R</h4>
+									<p>An introduction to the logic of programming, numerical algorithms, and graphics. The R statistical programming environment will be used to demonstrate how data can be stored, manipulated, plotted, and analyzed using both built-in functions and user extensions. Concepts of modularization, looping, vectorization, conditional execution, and function construction will be emphasized.</p>
 								</div>
 							</li>
 						</ul>
