Update list of teaching

--- a/teaching.html
+++ b/teaching.html
@@ -23,17 +23,27 @@ title: Home
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="title text-center">
-							<h3>Current Teaching</h3>
+							<h3>Classes Taught</h3>
 						</div>
 						<ul class="ul-dates">
+						    <li>
+								<div class="dates">
+									<span>Spring</span>
+									<span>2015</span>
+								</div>
+								<div class="content">
+									<h4>STAT 231 - Probability and Statistical Inference for Engineers</h4>
+									<p>Emphasis on engineering applications. Basic probability; random variables and probability distributions; joint and sampling distributions. Descriptive statistics; confidence intervals; hypothesis testing; simple linear regression; multiple linear regression; one way analysis of variance; use of statistical software.</p>
+								</div>
+							</li>
 							<li>
 								<div class="dates">
 									<span>Spring</span>
-									<span>2014</span>
+									<span>2013</span>
 								</div>
 								<div class="content">
-									<h4>STAT 480 - Statistical Computing Applications<h4>
-									<p>Modern statistical computing. Data management; spread sheets, verifying data accuracy, transferring data between software packages. Data and graphical analysis with statistical software packages. Algorithmic programming concepts and applications. Simulation. Software reliability.</p>
+									<h4>STAT 226 - Introduction to Business Statistics</h4>
+									<p>Obtaining, presenting, and organizing statistical data; measures of location and dispersion; the Normal distribution; sampling and sampling distributions; elements of statistical inference; estimation and confidence intervals; hypothesis testing; inference for simple linear regression analysis; use of computers to visualize and analyze data.</p>
 								</div>
 							</li>
 						</ul>
@@ -46,9 +56,29 @@ title: Home
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="title text-center">
-							<h3>Teaching History</h3>
+							<h3>Classes TAed</h3>
 						</div>
-						<ul class="ul-dates-gray">
+						<ul class="ul-dates">
+						    <li>
+								<div class="dates">
+									<span>Fall</span>
+									<span>2014</span>
+								</div>
+								<div class="content">
+									<h4>STAT 579 - An Introduction to R<h4>
+									<p>An introduction to the logic of programming, numerical algorithms, and graphics. The R statistical programming environment will be used to demonstrate how data can be stored, manipulated, plotted, and analyzed using both built-in functions and user extensions. Concepts of modularization, looping, vectorization, conditional execution, and function construction will be emphasized.</p>
+								</div>
+							</li>
+						    <li>
+								<div class="dates">
+									<span>Spring</span>
+									<span>2014</span>
+								</div>
+								<div class="content">
+									<h4>STAT 480 - Statistical Computing Applications<h4>
+									<p>Modern statistical computing. Data management; spread sheets, verifying data accuracy, transferring data between software packages. Data and graphical analysis with statistical software packages. Algorithmic programming concepts and applications. Simulation. Software reliability.</p>
+								</div>
+							</li>
 							<li>
 								<div class="dates">
 									<span>Fall</span>
@@ -57,16 +87,6 @@ title: Home
 								<div class="content">
 									<h4>STAT 579 - An Introduction to R</h4>
 									<p>An introduction to the logic of programming, numerical algorithms, and graphics. The R statistical programming environment will be used to demonstrate how data can be stored, manipulated, plotted, and analyzed using both built-in functions and user extensions. Concepts of modularization, looping, vectorization, conditional execution, and function construction will be emphasized.</p>
-								</div>
-							</li>
-							<li>
-								<div class="dates">
-									<span>Spring</span>
-									<span>2013</span>
-								</div>
-								<div class="content">
-									<h4>STAT 226 - Introduction to Business Statistics</h4>
-									<p>Obtaining, presenting, and organizing statistical data; measures of location and dispersion; the Normal distribution; sampling and sampling distributions; elements of statistical inference; estimation and confidence intervals; hypothesis testing; inference for simple linear regression analysis; use of computers to visualize and analyze data.</p>
 								</div>
 							</li>
 							<li>
