--- a/projects.html
+++ b/projects.html
@@ -34,23 +34,23 @@ title: Projects
 											<a href="#" class="pubcollapse">
 												<i class="icon-expand-alt"></i>
 											</a>
-											<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0129200" class="tooltips" title="External link" target="_blank">
+											<a href="https://journal.r-project.org/archive/2015-1/hare-buja-hofmann.pdf" class="tooltips" title="External link" target="_blank">
 												<i class="icon-external-link"></i>
 											</a>
-											<a href="https://github.com/erichare/peptide-paper" class="tooltips" title="GitHub" target="_blank">
+											<a href="https://github.com/erichare/discreteRV" class="tooltips" title="GitHub" target="_blank">
 												<i class="fa fa-github"></i>
 											</a>
 											
 										</div>
 
-										<h4 class="pubtitle">Biomathematical description of synthetic Peptide libraries.</h4>
-										<div class="pubauthor"><strong>Timo Sieber</strong>, Eric Hare, Heike Hofmann, and Martin Treppel</div>
-										<div class="pubcite"><span class="label label-warning">Papers</span>PLOS One, Volume 10, No. 6, 2015</div>
+										<h4 class="pubtitle">Manipulation of Discrete Random Variables with discreteRV</h4>
+										<div class="pubauthor"><strong>Eric Hare</strong>, Andreas Buja, and Heike Hofmann</div>
+										<div class="pubcite"><span class="label label-warning">Papers</span>R Journal, Volume 7, No. 1, June 2015</div>
 										
 									</div>
 									<div class="pubdetails">
 										<h4>Abstract</h4>
-										<p>Libraries of randomised peptides displayed on phages or viral particles are essential tools in a wide spectrum of applications. However, there is only limited understanding of a library's fundamental dynamics and the influences of encoding schemes and sizes on their quality. Numeric properties of libraries, such as the expected number of different peptides and the library's coverage, have long been in use as measures of a library's quality. Here, we present a graphical framework of these measures together with a library's relative efficiency to help to describe libraries in enough detail for researchers to plan new experiments in a more informed manner. In particular, these values allow us to answer-in a probabilistic fashion-the question of whether a specific library does indeed contain one of the "best" possible peptides. The framework is implemented in a web-interface based on two packages, discreteRV and peptider, to the statistical software environment R. We further provide a user-friendly web-interface called PeLiCa (Peptide Library Calculator, http://www.pelica.org), allowing scientists to plan and analyse their peptide libraries.</p>
+										<p>A prominent issue in statistics education is the sometimes large disparity between the theoretical and the computational coursework. discreteRV is an R package for manipulation of discrete random variables which uses clean and familiar syntax similar to the mathematical notation in introductory probability courses. The package offers functions that are simple enough for users with little experience with statistical programming, but has more advanced features which are suitable for a large number of more complex applications. In this paper, we introduce and motivate discreteRV, describe its functionality, and provide reproducible examples illustrating its use.</p>
 									</div>
 								</div>
 							    <div class="item mix paper" data-year="2015">
