--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
 					<div class="clearfix visible-sm visible-xs"></div>
 					<div class="col-sm-12 col-md-7">
 						<h3 class="title">Eric Hare</h3>
-						<p>My name is Eric Hare, and I am a PhD student at Iowa State University in Ames, IA. I am pursuing a co-major in Statistics and Computer Science. My research interests include Exploratory Data Analysis, Statistical Graphics, Statistical Computing, Statistical Models, Reproducible Research.</p>
+						<p>My name is Eric Hare, and I am a PhD student at Iowa State University in Ames, IA. I am pursuing a co-major in Statistics and Computer Science. My research interests include Exploratory Data Analysis, Statistical Graphics, Statistical Computing, Statistical Models, and Reproducible Research.</p>
 						
 						<p>The projects link on the left will give you a sample of the research I've done at Iowa State. You can also browse my <a href="http://www.github.com/erichare">GitHub Page</a> to see a more comprehensive list.</p>
 					</div>  
