Why did the page build fail?

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@ title: Projects
 
 										<h4 class="pubtitle">Automatic Matching of Bullet Lands</h4>
 										<div class="pubauthor"><strong>Eric Hare</strong>, Heike Hofmann, Alicia Carriquiry</div>
-										<div class="pubcite"><span class="label label-warning">Papers</span>In Progress</div>
+										<div class="pubcite"><span class="label label-warning">Papers</span>Accepted in Annals of Applied Statistics</div>
 										
 									</div>
 									<div class="pubdetails">
@@ -71,7 +71,7 @@ title: Projects
 
 										<h4 class="pubtitle">Introducing Statistics with intRo</h4>
 										<div class="pubauthor"><strong>Eric Hare</strong>, Andrea Kaplan</div>
-										<div class="pubcite"><span class="label label-warning">Papers</span>In Progress</div>
+										<div class="pubcite"><span class="label label-warning">Papers</span>Accepted in Journal of Computational and Graphical Statistics</div>
 										
 									</div>
 									<div class="pubdetails">
