--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@ title: Projects
 											<a href="#" class="pubcollapse">
 												<i class="icon-expand-alt"></i>
 											</a>
-											<a href="https://erichare.shinyapps.io/x3prproto" class="tooltips" title="External link" target="_blank">
+											<a href="https://erichare.shinyapps.io/x3prplus" class="tooltips" title="External link" target="_blank">
 												<i class="icon-external-link"></i>
 											</a>
 											<a href="https://github.com/heike/x3prplus" class="tooltips" title="GitHub" target="_blank">
