--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@ title: Projects
 
 										<h4 class="pubtitle">Introducing Statistics with intRo</h4>
 										<div class="pubauthor"><strong>Eric Hare</strong>, Andrea Kaplan</div>
-										<div class="pubcite"><span class="label label-warning">Papers</span>Submitted to the Journal of Computational and Graphical Statistics</div>
+										<div class="pubcite"><span class="label label-warning">Papers</span>Accepted by the Journal of Computational and Graphical Statistics</div>
 										
 									</div>
 									<div class="pubdetails">
