Update CV with latest job info

--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@ title: Projects
 											
 										</div>
 
-										<h4 class="pubtitle">Introducing Statistics with intRo</h4>
+										<h4 class="pubtitle">Designing Modular Software: A Case Study in Introductory Statistics</h4>
 										<div class="pubauthor"><strong>Eric Hare</strong>, Andrea Kaplan</div>
 										<div class="pubcite"><span class="label label-warning">Papers</span>Accepted by the Journal of Computational and Graphical Statistics</div>
 										
