Paper was accepted!

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@ title: Projects
 											<a href="https://erichare.shinyapps.io/x3prplus" class="tooltips" title="External link" target="_blank">
 												<i class="fa fa-external-link"></i>
 											</a>
-											<a href="https://github.com/heike/x3prplus" class="tooltips" title="GitHub" target="_blank">
+											<a href="https://github.com/erichare/bulletr" class="tooltips" title="GitHub" target="_blank">
 												<i class="fa fa-github"></i>
 											</a>
 											
@@ -45,7 +45,7 @@ title: Projects
 
 										<h4 class="pubtitle">Automatic Matching of Bullet Lands</h4>
 										<div class="pubauthor"><strong>Eric Hare</strong>, Heike Hofmann, Alicia Carriquiry</div>
-										<div class="pubcite"><span class="label label-warning">Papers</span>In Progress</div>
+										<div class="pubcite"><span class="label label-warning">Papers</span>Accepted by the Annals of Applied Statistics</div>
 										
 									</div>
 									<div class="pubdetails">
